--- a/viditor-recorder.html
+++ b/viditor-recorder.html
@@ -7,12 +7,6 @@
 </body>
 
 <template name="viditor">
-	<div>
-		<button id="play">Play</button>
-		<button id="pause">Pause</button>
-		<button id="stop">Stop</button>
-	</div>
-	<div>
-		<video></video>
-	</div>
+	<img width="100px" src="http://arcym.github.io/viditor-splash/images/logo.png"/>
+	<video></video>
 </template>
